Changed design so that search bar matched some material design principals.

--- a/public/css/marvel.css
+++ b/public/css/marvel.css
@@ -6,3 +6,48 @@ body {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
 }
+
+* { box-sizing:border-box; }
+
+/* basic stylings ------------------------------------------ */
+  .container 		{
+  font-family:'Roboto';
+  width:600px;
+  margin:30px auto 0;
+  display:block;
+  background:#FFF;
+  padding:10px 50px 50px;
+}
+
+input 				{
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:100vw;
+  border:none;
+  border-bottom:1px solid #757575;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+input:focus 		{ outline:none; }
+
+/* LABEL ======================================= */
+label 				 {
+  color:#999;
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:#5264AE;
+}
