--- a/public/css/marvel.css
+++ b/public/css/marvel.css
@@ -1,62 +1,19 @@
-body {
-  font-family: "Roboto", sans-serif;
-}
-.header h1 {
-  margin: 0;
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
+.thumbNail {
+  width: 150px;
+  height: 150px;
 }
 
-* {
-  box-sizing: border-box;
+.characterSelector {
+  position: relative;
+
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 100px auto 2fr;
 }
 
-/* basic stylings ------------------------------------------ */
-.container {
-  font-family: "Roboto";
-  width: 600px;
-  margin: 30px auto 0;
-  display: block;
-  background: #fff;
-  padding: 10px 50px 50px;
-}
-
-input {
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 90vw;
-  border: none;
-  border-bottom: 1px solid #757575;
-  margin: 0 auto;
-  margin-bottom: 20px;
-}
-input:focus {
-  outline: none;
-}
-
-/* LABEL ======================================= */
-label {
-  color: #999;
-  font-size: 18px;
-  font-weight: normal;
+.bottom-left {
+  color: white;
   position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-/* active state */
-input:focus ~ label,
-input:valid ~ label {
-  top: -20px;
-  font-size: 14px;
-  color: #5264ae;
-}
-.comics {
-  margin: auto;
-  width: 80%;
+  bottom: 2px;
+  left: 2px;
 }
