--- a/public/css/marvel.css
+++ b/public/css/marvel.css
@@ -1,14 +1,20 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .thumbNail {
   width: 150px;
   height: 150px;
 }
 
+.character {
+  margin: 0 25px 0 25px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 10px;
+}
+
 .characterSelector {
   position: relative;
-
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: 100px auto 2fr;
 }
 
 .bottom-left {
@@ -16,4 +22,5 @@
   position: absolute;
   bottom: 2px;
   left: 2px;
+  font-weight: bolder;
 }
